ProFit Event App/objects/Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>Log_Date_Time__c</fullName>
        <description>Log Date and Time of Occurance</description>
        <label>Log Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Log_Details__c</fullName>
        <description>Detailed Information of the Error Log</description>
        <label>Log Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Log__c</fullName>
        <description>Error Log Number</description>
        <displayFormat>ER-{00000}</displayFormat>
        <label>Log #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Process_Name__c</fullName>
        <description>Cause of the Error</description>
        <label>Process Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Error Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>